code clean up and optimize